--- a/projects/ngx-relic/src/assets/scss/utils/_variables.scss
+++ b/projects/ngx-relic/src/assets/scss/utils/_variables.scss
@@ -1,4 +1,5 @@
-$variations: "primary", "neutral", "info", "warning", "success", "danger";
+$variations: "primary", "neutral", "info", "warning", "success", "danger",
+  "slate";
 $spacing-values: 0, 1, 2, 3, 4, 5, 6;
 $rounded-values: "xs", "md", "lg", "full";
 $default-size: 0.4;
