--- a/projects/ngx-relic/src/lib/tag/tag.component.scss
+++ b/projects/ngx-relic/src/lib/tag/tag.component.scss
@@ -19,15 +19,58 @@
   }
 
   @each $variation in $variations {
-    &--outline-#{$variation} {
+    &--outline-#{$variation}-small {
       border: 1px solid var(--color-#{$variation}-500);
       color: var(--color-#{$variation}-400);
+      font-size: 8px;
+
+      & > em {
+        cursor: pointer;
+        font-size: 12px;
+      }
     }
 
-    &--#{$variation} {
+    &--outline-#{$variation}-medium {
+      border: 1px solid var(--color-#{$variation}-500);
+      color: var(--color-#{$variation}-400);
+      font-size: 12px;
+
+      & > em {
+        cursor: pointer;
+        font-size: 16px;
+      }
+    }
+
+    &--outline-#{$variation}-large {
+      border: 1px solid var(--color-#{$variation}-500);
+      color: var(--color-#{$variation}-400);
+      font-size: 18px;
+
+      & > em {
+        cursor: pointer;
+        font-size: 24px;
+      }
+    }
+
+    &--#{$variation}-small {
       border: 1px solid var(--color-#{$variation}-800);
       background-color: var(--color-#{$variation}-500);
       color: var(--color-slate-50);
+      font-size: 8px;
+    }
+
+    &--#{$variation}-medium {
+      border: 1px solid var(--color-#{$variation}-800);
+      background-color: var(--color-#{$variation}-500);
+      color: var(--color-slate-50);
+      font-size: 12px;
+    }
+
+    &--#{$variation}-large {
+      border: 1px solid var(--color-#{$variation}-800);
+      background-color: var(--color-#{$variation}-500);
+      color: var(--color-slate-50);
+      font-size: 18px;
     }
   }
 }
