--- a/projects/ngx-relic/src/lib/tooltip/tooltip.component.scss
+++ b/projects/ngx-relic/src/lib/tooltip/tooltip.component.scss
@@ -20,6 +20,7 @@
     border-radius: 6px;
 
     &--top {
+      margin-bottom: 11px;
       bottom: 100%;
       left: 50%;
       transform: translateX(-50%);
@@ -34,6 +35,7 @@
     }
 
     &--bottom {
+      margin-top: 11px;
       top: 100%;
       left: 50%;
       transform: translateX(-50%);
@@ -57,7 +59,7 @@
         @include common-tooltip-arrow;
         top: 50%;
         right: 100%;
-        margin-left: 5px;
+        margin-left: 11px;
         border-color: transparent #555 transparent transparent;
       }
     }
@@ -66,7 +68,7 @@
       bottom: 50%;
       right: 100%;
       transform: translateY(50%);
-      margin-right: 10px;
+      margin-right: 11px;
 
       &::after {
         @include common-tooltip-arrow;
