--- a/projects/ngx-relic/src/lib/select/select/select.component.scss
+++ b/projects/ngx-relic/src/lib/select/select/select.component.scss
@@ -28,9 +28,9 @@
     align-items: center;
   }
 
-  &__scroll {
-    min-height: 168px;
-  }
+  // &__scroll {
+  //   min-height: 168px;
+  // }
 
   &__expand {
     cursor: pointer;
